# Sphinx-CPP-TriangleLib

./: CMakeLists.txt  LICENSE.md  README.md  requirements.txt
archive/: README.md
archive/docs/: Doxyfile  README.md
archive/docs/source/: index.rst
archive/doxygen-docs/: README.md
archive/examples/: CMakeLists.txt
archive/examples/area/: CMakeLists.txt  area.cpp
docs/: README.md
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  files.html  triangle_8h_source.html
docs/doxygen/latex/: classtrianglelib_1_1Triangle.tex
docs/source/: api.rst  conf.py  index.rst
docs/sphinx/source/: conf.py
doxygen-docs/: Doxyfile
doxygen-docs/html/: annotated.html  classes.html  classtrianglelib_1_1Triangle-members.html  classtrianglelib_1_1Triangle.html  dir_3ba8fae88f596ca791bafc4b3560da64.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  md__home_leimao_GitHub_Sphinx-CPP-TriangleLib_LICENSE.html  md__home_leimao_GitHub_Sphinx-CPP-TriangleLib_README.html  md__home_leimao_GitHub_Sphinx-CPP-TriangleLib_examples_README.html  namespaces.html  namespacetrianglelib.html  pages.html  triangle_8h_source.html
doxygen-docs/latex/: annotated.tex  classtrianglelib_1_1Triangle.tex  md__home_leimao_GitHub_Sphinx-CPP-TriangleLib_LICENSE.tex  md__home_leimao_GitHub_Sphinx-CPP-TriangleLib_README.tex  namespaces.tex  namespacetrianglelib.tex  refman.tex
include/: triangle.h
src/: CMakeLists.txt  triangle.cpp  utils.cpp
(+67 files in other folders)
